--- a/example-app/android/app/src/main/res/values/strings.xml
+++ b/example-app/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">SIM Example</string>
-    <string name="title_activity_main">SIM Example</string>
+    <string name="app_name">Sim Example</string>
+    <string name="title_activity_main">Sim Example</string>
     <string name="package_name">app.capgo.sim</string>
     <string name="custom_url_scheme">app.capgo.sim</string>
 </resources>
